feat(F-02/file-logging): fundament logowania SLF4J + Logback (p1)
Powód: realizacja F-02 file-logging — logowanie do pliku, w ramach której do
aplikacji zostaje dodane logowanie zdarzeń i błędów do pliku. Faza 1 dowozi sam
fundament: bibliotekę, jej wpięcie w modularny build i konfigurację appenderów,
bez treści domenowych.

Efekt: wpis oddany do SLF4J trafia do pliku i przenosi polskie diakrytyki —
dowiedzione testem pisanym przed konfiguracją, który najpierw padł na asercji
przy loggerze NOP (No Operation). Aplikacja pisze do log/mysmaug.log, testy do
target/test-logs/, więc jedno nie zaśmieca drugiego.

- ADD: LoggingTest — dowód end-to-end: plik powstaje, niesie wpis, diakrytyki
  przeżywają zapis i odczyt. Trzy osobne komunikaty porażki, bo "brak pliku",
  "brak wpisu" i "rozsypane znaki" prowadzą do trzech różnych przyczyn
- ADD: logback.xml — FileAppender do log/mysmaug.log, dopisywanie między
  uruchomieniami, UTF-8 zadeklarowany jawnie. Rotacja dopiero w Fazie 3
- ADD: logback-test.xml — czytany z pierwszeństwem przed logback.xml, kieruje
  zapis z testów do target/
- ADD: pom.xml — zależności slf4j-api 2.0.17 i logback-classic 1.5.18, wersje
  przypięte w properties. slf4j-api deklarowany bezpośrednio mimo
  przechodniości, dla kontroli nad tym, co trafia na module-path
- ADD: module-info.java — requires org.slf4j oraz requires
  ch.qos.logback.classic. Bez tej drugiej deklaracji graf modułów nie wciągnie
  implementacji, SLF4J nie znajdzie jej przez ServiceLoader, a logowanie
  zamilknie bez błędu kompilacji i bez wyjątku
- MOD: ResourcesTest — logback.xml jest ładowany autodetekcją, więc zgłaszał się
  jako zasób osierocony. Dostaje nazwany wyjątek plus własną podłogę
  sprawdzającą obecność; wyjątek celowo wąski, żeby każda następna sierota
  nadal zapalała test
- ADD: .gitignore — wpis log/. Logi z testów pokrywa istniejący wpis target/